# pseudo-multiview-360-pose

./: .gitignore  .gitmodules  README.md  cotracker_person_tracking.py  cotracker_person_tracking_sam3d_body.py  cotracker_person_tracking_yolo.py  pyproject.toml  render_direct_360_xyz_resized.py  sam3d_body_360_direct_compare.py  sam3d_body_multiview_fusion.py  test_360_detection.py  test_frame_world_visualization.py  test_person_detection.py  vlm_video_analyze.py
configs/: multiview_fusion.yaml  paths.example.yaml
pointcloud_reconstruction/: README.md
pointcloud_reconstruction/configs/: kimura2_360.json
pointcloud_reconstruction/scripts/: evaluate_fusion.py  export_colmap_views.py  export_refined_frame_plys.py  extract_dynamic_views.py  merge_vipe_views.py  refine_vipe_views.py  run_vipe_direct_360.py  run_vipe_views.py  view_fused_ply.py
pointcloud_reconstruction/tests/: test_bbox_views.py  test_direct_360.py  test_evaluate_fusion.py  test_export_colmap.py  test_frame_ply_export.py  test_merge_colmap.py  test_ply_viewer.py  (+2 more)
pose3d_kpt/: AGENTS.md  README.md  cotracker_person_tracking_yolo.py  cotracker_selfie_bbox_tracking_yolo.py  framewise_person_detection.py  sam3d_body_360_direct_compare.py  sam3d_body_multiview_fusion.py
pose_pointcloud_fusion/: README.md
scripts/: run_direct_360_compare.py  run_multiview_fusion.py  run_tracking.py
tests/: test_360_vlm_person_detection.py  test_cotracker_yolo_track_points.py  test_frame_world_visualization.py  test_project_structure.py  test_repository_structure.py  test_sam3d_body_360_direct_compare.py
(+67 files in other folders)
